--- a/.gitignore
+++ b/.gitignore
@@ -167,7 +167,7 @@ Generated_Code/
 # Backup & report files from converting an old project file to a newer
 # Visual Studio version. Backup files are not needed, because we have git ;-)
 _UpgradeReport_Files/
-Backup*/
+#Backup*/ - Removed because it was causing it to blacklist one of my classes :(
 UpgradeLog*.XML
 UpgradeLog*.htm
 
